# src/main/java/com/example/app/requests/LoginRequest.java
@@ -1,0 +1,9 @@
+package com.example.app.requests;
+
+import lombok.Data;
+
+@Data
+public class LoginRequest {
+    private String username;
+    private String password;
+}
